# Cyber_guard

./: .gitignore  .planning.code-workspace  README.md  about.md  docker-compose.yml  vercel.json
.planning/codebase/: INTEGRATIONS.md  STACK.md
api/: index.py  requirements.txt
backend/: README.md  alert_mailer.py  anomaly_detector.py  auth.py  auto_responder.py  check_routes.py  database.py  generate_chaos_logs.py  log_watcher.py  models.py  port_scanner.py  pyproject.toml  redis_pipeline.py  requirements.txt  server.py  tail_watcher.py  threshold_engine.py
backend/data/: allowed_ports.json  email_audit.json  port_scan_history.json  response_audit.json  threat_db.json  thresholds.json
backend/reports/: incident_report_20260205_192019.md
backend/src/cyberguard/: crew.py  main.py
backend/src/cyberguard/config/: agents.yaml  tasks.yaml
backend/src/cyberguard/tools/: __init__.py  custom_tools.py  security_tools.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/dashboard/: AgentFeed.tsx  ControlPanel.tsx  IncidentCard.tsx  StatCard.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/context/: AuthContext.tsx  LiveAlertsContext.tsx
frontend/src/hooks/: useBackend.ts  useSimulation.ts
frontend/src/lib/: api.ts
frontend/src/pages/: About.tsx  Dashboard.tsx  History.tsx  Home.tsx  Investigation.tsx  Report.tsx  SignIn.tsx  SignUp.tsx  ThreatMonitor.tsx
test_app/: app.py  ddos_simulate.py  init_db.py  pyproject.toml  run.md  working_test_app.md
test_app/backup/: db_dump.sql
test_app/secret/: credentials.txt
test_app/static/: style.css
test_app/templates/: admin.html  base.html  comments.html  ddos.html  index.html  login.html  logs.html  ping.html  products.html  profile.html  upload.html
