[project]
name = "cyberguard"
version = "0.1.0"
description = "cyberguard using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.9.3",
    "crewai[google-genai,tools]==1.9.3",
    "email-validator>=2.3.0",
    "fastapi>=0.128.1",
    "fastapi-sso>=0.20.0",
    "langchain-groq>=1.1.2",
    "litellm>=1.75.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.5.0",
    "watchdog>=4.0.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "passlib>=1.7.4",
    "motor>=3.7.1",
    "pymongo>=4.16.0",
]

[project.scripts]
cyberguard = "cyberguard.main:run"
run_crew = "cyberguard.main:run"
train = "cyberguard.main:train"
replay = "cyberguard.main:replay"
test = "cyberguard.main:test"
run_with_trigger = "cyberguard.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"